refactor(benchmark): standardize empty collection usage to List.of() [LOW-4]
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>