@@ -1,7 +1,6 @@
 // SPDX-License-Identifier: MIT OR Apache-2.0
 package sh.brane.benchmark;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
@@ -66,7 +65,7 @@ public class MainnetBenchmark {
             // 1. Brane WebSocketProvider
             try {
                 braneProvider = WebSocketProvider.create(url);
-                braneProvider.send("eth_chainId", Collections.emptyList());
+                braneProvider.send("eth_chainId", List.of());
             } catch (Exception e) {
                 System.err.println("Brane init failed: " + e.getMessage());
             }
@@ -118,7 +117,7 @@ public class MainnetBenchmark {
     @Benchmark
     @BenchmarkMode(Mode.Throughput)
     public void brane_chainId(Blackhole bh) throws Exception {
-        bh.consume(braneProvider.send("eth_chainId", Collections.emptyList()));
+        bh.consume(braneProvider.send("eth_chainId", List.of()));
     }
 
     @Benchmark
@@ -132,7 +131,7 @@ public class MainnetBenchmark {
     @Benchmark
     @BenchmarkMode(Mode.Throughput)
     public void brane_blockNumber(Blackhole bh) throws Exception {
-        bh.consume(braneProvider.send("eth_blockNumber", Collections.emptyList()));
+        bh.consume(braneProvider.send("eth_blockNumber", List.of()));
     }
 
     @Benchmark
@@ -162,7 +161,7 @@ public class MainnetBenchmark {
     @BenchmarkMode({ Mode.AverageTime, Mode.SampleTime })
     @OutputTimeUnit(TimeUnit.MILLISECONDS)
     public void brane_latency_blockNumber(Blackhole bh) throws Exception {
-        bh.consume(braneProvider.send("eth_blockNumber", Collections.emptyList()));
+        bh.consume(braneProvider.send("eth_blockNumber", List.of()));
     }
 
     @Benchmark
@@ -179,7 +178,7 @@ public class MainnetBenchmark {
     public void brane_pipeline_5(Blackhole bh) throws Exception {
         CompletableFuture<?>[] futures = new CompletableFuture[5];
         for (int i = 0; i < 5; i++) {
-            futures[i] = braneProvider.sendAsync("eth_blockNumber", Collections.emptyList());
+            futures[i] = braneProvider.sendAsync("eth_blockNumber", List.of());
         }
         for (CompletableFuture<?> f : futures) {
             bh.consume(f.get());
